# rust-project

./: README.md
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: 0.pack  11.pack  12.pack  14.pack  3.pack  4.pack  5.pack  6.pack  (+2 more)
frontend/.next/server/pages/: _app.js  _document.js  index.js
frontend/.next/static/chunks/: _error.js  node_modules_censo-custody_solana-wallet-adapter_lib_esm_index_js.js  node_modules_fractalwagmi_solana-wallet-adapter_dist_esm_index_js.js  node_modules_jnwng_walletconnect-solana_lib_esm_index_js.js  node_modules_keystonehq_sol-keyring_dist_index_js.js  node_modules_ledgerhq_hw-transport-webhid_lib-es_TransportWebHID_js.js  node_modules_solana_wallet-adapter-react-ui_lib_esm_index_js.js  node_modules_solflare-wallet_sdk_lib_esm_index_js.js  node_modules_strike-protocols_solana-wallet-adapter_lib_esm_index_js.js  webpack.js
frontend/.next/static/webpack/: f6fd56dfb4ea6f1f.webpack.hot-update.json  webpack.389eb03b627881cb.hot-update.js  webpack.98fbf056a2c81e53.hot-update.js  webpack.d85d78f5266555f7.hot-update.js  webpack.e3cdc8784eb05633.hot-update.js  webpack.f6fd56dfb4ea6f1f.hot-update.js
frontend/src/components/: AppBar.tsx  Bank.tsx  ContentContainer.tsx  solanapdas_our.json  solanapdas_our.ts
frontend/src/pages/: _app.tsx  basics.tsx  index.tsx
frontend/src/views/basics/: index.tsx
rust-encode-project/: Anchor.toml
rust-encode-project/programs/rust-encode-project/: Cargo.toml
rust-encode-project/programs/rust-encode-project/src/: lib.rs
rust-encode-project/tests/: rust-encode-project.ts
(+22 files in other folders)
